tests/diagnostics/cases/types/09_array_to_scalar_mismatch.home
// Type mismatch: assigning an array to a scalar binding.
fn main() {
    let xs = [1, 2, 3]
    let ys: i32 = xs
}
